--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,10 @@
     <groupId>org.shootme</groupId>
     <artifactId>shootme</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
 </project>
